--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "delegate.js 是一个轻量级的 JavaScript 事件委托库，封装了：on()、once()、off() 事件侦听相关的常用方法，使用起来方便灵活。",
   "main": "dist/delegate.js",
   "scripts": {
+    "build": "gulp build",
     "clean": "gulp clean",
     "copy": "gulp copy",
     "connect": "gulp server",
-    "watch": "gulp watch",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "dev": "gulp dev",
     "lint": "gulp lint",
+    "lint:fix": "npm run lint --cache --fix",
     "transpile": "gulp transpile",
-    "build": "gulp build"
+    "watch": "gulp watch"
   },
   "repository": {
     "type": "git",
@@ -30,6 +32,8 @@
   "homepage": "https://github.com/yaohaixiao/delegate.js#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.14.8",
+    "commitlint": "^17.4.4",
+    "conventional-changelog-cli": "^2.2.2",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-clean": "^0.4.0",
@@ -42,6 +46,17 @@
     "gulp-uglify": "^3.0.2",
     "gulp-umd": "^2.0.0",
     "gulp-watch": "^5.0.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.1.2",
     "os": "^0.1.2"
+  },
+  "gitHooks": {
+    "pre-commit": "lint-staged",
+    "commit-msg": "commitlint"
+  },
+  "lint-staged": {
+    "src/**/*.js": [
+      "npm run lint:fix"
+    ]
   }
 }
