feat: 调整代码，添加新的方法 purge 和 getListeners 等方法
1. 调整 Emitter 对象代码，添加新方法，移除一些不要的数据类型验证的方法;
2. 更新 README.md，添加更加详细的 API 稳定说明;
3. 调整 es6 目录名称微 esm 目录，并调整 import 文件的路径；

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@yaohaixiao/delegate.js",
-  "version": "0.3.1",
-  "description": "delegate.js 是一个轻量级的 JavaScript 事件委托库，封装了：on()、once()、off() 事件侦听相关的常用方法，使用起来方便灵活。",
-  "main": "dist/delegate.js",
+  "version": "0.4.0",
+  "description": "delegate.js 是一个轻量级的 JavaScript 事件委托库，封装了：on()、once()、off() 等事件侦听相关的常用方法，使用起来方便灵活。",
+  "main": "dist/delegate.min.js",
   "scripts": {
     "build": "gulp build",
     "clean": "gulp clean",
@@ -35,9 +35,12 @@
   },
   "homepage": "https://github.com/yaohaixiao/delegate.js#readme",
   "devDependencies": {
+    "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.14.8",
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
+    "babelify": "^10.0.0",
+    "browserify": "^3.46.1",
     "commitlint": "^17.4.4",
     "conventional-changelog-cli": "^2.2.2",
     "eslint": "^8.34.0",
@@ -45,11 +48,13 @@
     "eslint-plugin-prettier": "^4.2.1",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
+    "gulp-browserify": "^0.5.1",
     "gulp-clean": "^0.4.0",
     "gulp-connect": "^5.7.0",
     "gulp-eslint": "^6.0.0",
     "gulp-livereload": "^4.0.2",
     "gulp-open": "^3.0.1",
+    "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
