chore: update gulpfile.js and on() method

--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "description": "delegate.js 是一个轻量级的 JavaScript 事件委托库，封装了：on()、once()、off() 等事件侦听相关的常用方法，使用起来方便灵活。",
   "main": "dist/delegate.min.js",
   "scripts": {
+    "start": "gulp dev",
     "build": "gulp build",
     "clean": "gulp clean",
-    "copy": "gulp copy",
-    "connect": "gulp server",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "dev": "gulp dev",
     "lint": "eslint",
     "lint:fix": "npm run lint --cache --fix",
     "prettier:check": "npx prettier --check \"**/*.js\"",
@@ -38,7 +36,6 @@
     "@babel/preset-env": "^7.14.8",
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
-    "babelify": "^10.0.0",
     "browserify": "^3.46.1",
     "commitlint": "^17.4.4",
     "conventional-changelog-cli": "^2.2.2",
@@ -47,7 +44,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
-    "gulp-browserify": "^0.5.1",
     "gulp-clean": "^0.4.0",
     "gulp-connect": "^5.7.0",
     "gulp-eslint": "^6.0.0",
