feat: 添加 getCharCode() 方法
1. 添加 getCharCode() 方法；
2. 更新 README.md 说明，添加 getCharCode() 方法相关的示例；

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@yaohaixiao/delegate.js",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "delegate.js 是一个轻量级的 JavaScript 事件委托库，封装了：on()、once()、off() 等事件侦听相关的常用方法，使用起来方便灵活。",
   "main": "delegate.min.js",
   "scripts": {
-    "start": "gulp dev",
+    "start": "gulp start",
     "build": "gulp build",
     "clean": "gulp clean",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
