--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint:fix": "npm run lint --cache --fix",
     "prettier:check": "npx prettier --check \"**/*.js\"",
     "prettier:write": "npx prettier --write \"**/*.js\"",
+    "test:unit": "jest --config ./jest.config.json",
     "prepare": "husky install",
     "transpile": "gulp transpile",
     "watch": "gulp watch"
@@ -36,6 +37,7 @@
     "@babel/preset-env": "^7.14.8",
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
+    "babel-jest": "^29.5.0",
     "browserify": "^3.46.1",
     "commitlint": "^17.4.4",
     "conventional-changelog-cli": "^2.2.2",
@@ -57,6 +59,9 @@
     "gulp-umd": "^2.0.0",
     "gulp-watch": "^5.0.1",
     "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-html-reporter": "^3.7.0",
     "lint-staged": "^13.1.2",
     "os": "^0.1.2",
     "prettier": "^2.8.4"
