--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prettier:check": "npx prettier --check \"**/*.js\"",
     "prettier:write": "npx prettier --write \"**/*.js\"",
     "test:unit": "jest --config ./jest.config.json",
+    "test": "npm run lint:fix && npm run prettier:write && npm run test:unit",
     "prepare": "husky install",
     "transpile": "gulp transpile",
     "watch": "gulp watch"
@@ -53,6 +54,7 @@
     "gulp-livereload": "^4.0.2",
     "gulp-open": "^3.0.1",
     "gulp-plumber": "^1.2.1",
+    "gulp-prettier": "^4.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
