--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yaohaixiao/delegate.js",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "delegate.js 是一个轻量级的 JavaScript 事件委托库，封装了：on()、once()、off() 等事件侦听相关的常用方法，使用起来方便灵活。",
   "main": "delegate.min.js",
   "scripts": {
@@ -10,8 +10,8 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "lint": "eslint",
     "lint:fix": "npm run lint --cache --fix",
-    "prettier:check": "npx prettier --check \"**/*.js\"",
-    "prettier:write": "npx prettier --write \"**/*.js\"",
+    "prettier:check": "npx prettier --check \"**/**/*.js\"",
+    "prettier:write": "npx prettier --write \"**/**/*.js\"",
     "test:unit": "jest --config ./jest.config.json",
     "test": "npm run lint:fix && npm run prettier:write && npm run test:unit",
     "prepare": "husky install",
