--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
   },
   "lint-staged": {
     "src/**/*.js": [
-      "npm run test"
+      "npm run lint:fix",
+      "npm run prettier:write"
     ]
   }
 }
