test: 完善 getTypes() 方法的单测代码，覆盖清除事件绑定后，再次清除 listeners 数据的场景

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "conventional-changelog-cli": "^2.2.2",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-jest": "^3.0.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "gulp": "^4.0.2",
