--- a/.prettierignore
+++ b/.prettierignore
@@ -6,18 +6,13 @@
 /docs
 /.vscode
 /report
-/public
 
 # misc
-.DS_Store
 npm-debug.log*
-yarn-error.log
 
 /coverage
 .idea
-yarn.lock
 package-lock.json
-*bak
 
 # visual studio code
 .history
@@ -31,5 +26,5 @@ screenshot
 .eslintcache
 
 .husky
-/delegate.js
+/delegate.core.min.js
 /delegate.min.js
