--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
   "name": "@yaohaixiao/delegate.js",
-  "version": "1.9.0",
+  "version": "1.9.1",
   "description": "delegate.js 一个轻量级的 JavaScript 事件委托库。",
   "main": "delegate.min.js",
   "scripts": {
     "start": "gulp start",
-    "docs": "gulp docs",
-    "build": "gulp build",
+    "build:lib": "rollup -c build/rollup.config.js --bundleConfigAsCjs",
+    "build:docs": "gulp build",
+    "build": "npm run build:lib && npm run build:docs",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "lint": "eslint",
     "lint:fix": "npm run lint --cache --fix",
-    "prettier:check": "npx prettier --check \"**/**/*.js\"",
-    "prettier:write": "npx prettier --write \"**/**/*.js\"",
+    "prettier:check": "npx prettier --check \"esm/**/*.js\"",
+    "prettier:write": "npx prettier --write \"esm/**/*.js\"",
     "test:unit": "jest --config jest.config.js",
     "test": "npm run lint:fix && npm run prettier:write && npm run test:unit",
-    "prepare": "husky install",
-    "watch": "gulp watch"
+    "watch": "gulp watch",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -24,7 +25,8 @@
   "keywords": [
     "JavaScript",
     "Event",
-    "Delegate"
+    "Delegate",
+    "delegate.js"
   ],
   "author": "Robert Yao",
   "license": "MIT",
@@ -37,6 +39,9 @@
     "@babel/preset-env": "^7.14.8",
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
+    "@rollup/plugin-commonjs": "^25.0.2",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-terser": "^0.4.3",
     "babel-jest": "^29.5.0",
     "commitlint": "^17.4.4",
     "conventional-changelog-cli": "^2.2.2",
@@ -46,7 +51,6 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.7.0",
@@ -55,13 +59,12 @@
     "gulp-less": "^5.0.0",
     "gulp-livereload": "^4.0.2",
     "gulp-open": "^3.0.1",
-    "gulp-plumber": "^1.2.1",
     "gulp-prettier": "^4.0.0",
     "gulp-pug": "^5.0.0",
     "gulp-rename": "^2.0.0",
+    "gulp-run": "^1.7.1",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
-    "gulp-umd": "^2.0.0",
     "gulp-watch": "^5.0.1",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
@@ -70,7 +73,8 @@
     "less-plugin-autoprefix": "^2.0.0",
     "lint-staged": "^13.1.2",
     "os": "^0.1.2",
-    "prettier": "^2.8.4"
+    "prettier": "^2.8.4",
+    "rollup": "^3.25.2"
   },
   "gitHooks": {
     "pre-commit": "lint-staged",
