--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@yaohaixiao/delegate.js",
-  "version": "1.9.3",
+  "version": "2.0.0",
   "description": "delegate.js 一个轻量级的 JavaScript 事件委托库。",
   "main": "delegate.min.js",
   "scripts": {
     "start": "gulp start",
-    "build:lib": "rollup -c build/rollup.config.js --bundleConfigAsCjs",
+    "build:lib": "rollup -c build/rollup.config.lib.js --bundleConfigAsCjs",
+    "build:api": "rollup -c build/rollup.config.api.js --bundleConfigAsCjs",
     "build:docs": "gulp build",
     "build": "npm run build:lib && npm run build:docs",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "lint": "eslint",
     "lint:fix": "npm run lint --cache --fix",
     "prettier:check": "npx prettier --check \"esm/**/*.js\"",
@@ -16,7 +16,8 @@
     "test:unit": "jest --config jest.config.js",
     "test": "npm run lint:fix && npm run prettier:write && npm run test:unit",
     "watch": "gulp watch",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s"
   },
   "repository": {
     "type": "git",
@@ -52,7 +53,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
-    "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.7.0",
     "gulp-cssmin": "^0.2.0",
     "gulp-eslint": "^6.0.0",
@@ -64,7 +64,6 @@
     "gulp-rename": "^2.0.0",
     "gulp-run": "^1.7.1",
     "gulp-sourcemaps": "^3.0.0",
-    "gulp-uglify": "^3.0.2",
     "gulp-watch": "^5.0.1",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
@@ -74,7 +73,7 @@
     "lint-staged": "^13.1.2",
     "os": "^0.1.2",
     "prettier": "^2.8.4",
-    "rollup": "^3.25.2"
+    "rollup": "^3.26.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged",
